Fix overflow when posting excessively long [code] content (#35)
* Long [code][/code] tags and other content could break out of the
posteare div. Fixed with setting width of .posteare to 75%.

* Wilderless + Wireless overwrote width for .postearea. Setting it to
auto is making stuff bad again. :auto seems to be a fix for IE6, but
fucking who cares about IE6? Not me. If really needed, an @if block
should do it.

* width of 0 should be less hacky. Thanks @nsgomez

--- a/core/skins/Wireless/extra.css
+++ b/core/skins/Wireless/extra.css
@@ -50,7 +50,6 @@ body #sidebar .column
 
 .postarea
 	display: block
-	width: auto // mostly for IE6
 	margin-left: 0
 
 @remove .postarea
